--- a/rules/proxy.yaml
+++ b/rules/proxy.yaml
@@ -14,3 +14,5 @@ payload:
   - DOMAIN-SUFFIX,javbee.vip
   - DOMAIN-SUFFIX,ai18.pics
   - DOMAIN-SUFFIX,idol69.net
+  - DOMAIN-SUFFIX,javball.com
+  - DOMAIN-SUFFIX,cnxx.me 
