--- a/rules/proxy.yaml
+++ b/rules/proxy.yaml
@@ -15,4 +15,5 @@ payload:
   - DOMAIN-SUFFIX,ai18.pics
   - DOMAIN-SUFFIX,idol69.net
   - DOMAIN-SUFFIX,javball.com
-  - DOMAIN-SUFFIX,cnxx.me 
+  - DOMAIN-SUFFIX,cnxx.me
+  - DOMAIN-SUFFIX,right.com.cn
